Initial copy for GoodListens project added

--- a/projects/GoodListens.html
+++ b/projects/GoodListens.html
@@ -101,9 +101,91 @@
         <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h2>Development Process</h2>
-            <p>My group had less than three weeks to design, implement, and present this mobile app for our final project. This forced us to make quick decisions and to aggresively prioritize the features we implemented. We implemented the user interface with React Native, and stored all the necessary data in a noSQL database powered by Google’s Firebase.</p>
-            <p>With our feature list implemented we created some rough mockups to agree on the screens our app would need.</p>
+            <p>We chose to implement the user interface with React Native and stored all the necessary data in a noSQL database powered by Google’s Firebase. My three-person group had less than three weeks to design, implement, and present this mobile app for our final project. This forced us to make quick decisions and prioritize only the necessary features that would give users the experience we wanted.</p>
+            <table>
+              <tr>
+                <td>Following other users in the app</td>
+                <td>Save favorite episodes</td>
+              </tr>
+              <tr>
+                <td>Create a chronological feed of listening data</td>
+                <td>Play episodes within the app</td>
+              </tr>
+              <tr>
+                <td>Browse podcasts</td>
+                <td>Display podcast thumbnail artwork</td>
+              </tr>
+              <tr>
+                <td>Create user's Podcast Library</td>
+                <td>Pull to refresh listening feed</td>
+              </tr>
+              <tr>
+                <td>Track the podcast episodes users listen to</td>
+                <td>Tracking and displaying total listening time</td>
+              </tr>
+              <tr>
+                <td>User episode ratings</td>
+                <td></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <div class='row margin-bottom-4'>
+          <div class='text-wrapper'>
+            <p>With our feature list in hand we used Adobe XD to collaboratively design rough mockups to agree on the screens our app would need.</p>
             <img src='../assets/goodlistens/mockups.png'>
+            <p>The mockups helped us sketch out an initial structure for our database.</p>
+            <p>Database sketch here</p>
+          </div>
+        </div>
+
+        <div class='row margin-bottom-4'>
+          <div class='text-wrapper'>
+            <p>My group used Github to manage our codebase and project tasks. We created seven milestones that needed to be met for the project to be a success and set due dates for each of them. As we worked toward a milestone we broke them into smaller, individual tasks, and opened Github issues to assign one or more people to implement the feature.</p>
+            <p>I acted as the team’s Buildmaster. I outlined the process we used for branching and merging, and helped people with their git errors.</p>
+            <p>While our project had to move quickly, our code review process was thorough. When anyone finished their work on a new feature, they notified the others in the group that their code was ready for review. We would test their branch locally and would only accept the new code if the other two group members approved. This ensured we didn’t waste any time taking steps backward when new features were added.</p>
+          </div>
+        </div>
+
+        <div class='row margin-bottom-4'>
+          <div class='text-wrapper'>
+            <h2>Results</h2>
+            <p>At the end of the project our group was able to create a React Native mobile app that was deployed using Expo. We managed to implement all but one of the features we prioritized.</p>
+            <table>
+              <tr>
+                <td>Following other users in the app</td>
+                <td>Save favorite episodes</td>
+              </tr>
+              <tr>
+                <td>Create a chronological feed of listening data</td>
+                <td>Play episodes within the app</td>
+              </tr>
+              <tr>
+                <td>Browse podcasts</td>
+                <td>Display podcast thumbnail artwork</td>
+              </tr>
+              <tr>
+                <td>Create user's Podcast Library</td>
+                <td>Pull to refresh listening feed</td>
+              </tr>
+              <tr>
+                <td>Track the podcast episodes users listen to</td>
+                <td>Tracking and displaying total listening time</td>
+              </tr>
+              <tr>
+                <td>User episode ratings</td>
+                <td></td>
+              </tr>
+            </table>
+          </div>
+        </div>
+
+        <div class='row margin-bottom-4'>
+          <div class='text-wrapper'>
+            <h2>Reflection</h2>
+            <p>This project offered a great amount of learning moments. I had professional experience collaboratively writing code in a mature codebase, but I had never started such a group project from scratch. We saw how slow progress could be when everyone was making changes to the same few files, and it took great teamwork to make any headway.</p>
+            <p>Our tight deadline also showed me what we could accomplish when time is the biggest constraint. There was no time to endlessly debate how a feature would be implemented. We had to quickly discuss workplans and trust that we would all carry our weight, and it resulted in an app we were proud to demo at the end of the project.</p>
           </div>
         </div>
 
