Small copy revisions

--- a/projects/GoodListens.html
+++ b/projects/GoodListens.html
@@ -154,28 +154,38 @@
             <p>At the end of the project our group was able to create a React Native mobile app that was deployed using Expo. We managed to implement all but one of the features we prioritized.</p>
             <table>
               <tr>
+                <th>Complete</th>
+                <th>Partial</th>
+                <th>Incomplete</th>
+              </tr>
+              <tr>
                 <td>Following other users in the app</td>
-                <td>Save favorite episodes</td>
-              </tr>
-              <tr>
-                <td>Create a chronological feed of listening data</td>
-                <td>Play episodes within the app</td>
-              </tr>
-              <tr>
                 <td>Browse podcasts</td>
-                <td>Display podcast thumbnail artwork</td>
-              </tr>
-              <tr>
-                <td>Create user's Podcast Library</td>
-                <td>Pull to refresh listening feed</td>
-              </tr>
-              <tr>
-                <td>Track the podcast episodes users listen to</td>
                 <td>Tracking and displaying total listening time</td>
               </tr>
               <tr>
+                <td>Create a chronological feed of listening data</td>
+              </tr>
+              <tr>
+                <td>Create the user's Podcast Library</td>
+              </tr>
+              <tr>
+                <td>Track the podcast episodes users listen to</td>
+              </tr>
+              <tr>
                 <td>User episode ratings</td>
-                <td></td>
+              </tr>
+              <tr>
+                <td>Save favorite episodes</td>
+              </tr>
+              <tr>
+                <td>Play episodes in the app</td>
+              </tr>
+              <tr>
+                <td>Display podcast thumbnail artwork</td>
+              </tr>
+              <tr>
+                <td>Pull to refresh listening feed</td>
               </tr>
             </table>
           </div>
