Added sorting thumbnail

--- a/index.html
+++ b/index.html
@@ -90,6 +90,11 @@
               <img class='thumbnail' src='assets/Thumbnails/goodlistens thumbnail.png'>
             </a>
           </div>
+          <div class='col-half project-card-buffer'>
+            <a href='projects/GoodListens.html'>
+              <img class='thumbnail' src='assets/Thumbnails/sorting thumbnail.png'>
+            </a>
+          </div>
         </div>
       </div>
 
