--- a/index.html
+++ b/index.html
@@ -91,7 +91,7 @@
             </a>
           </div>
           <div class='col-half project-card-buffer'>
-            <a href='projects/GoodListens.html'>
+            <a href='projects/sorting.html'>
               <img class='thumbnail' src='assets/Thumbnails/sorting thumbnail.png'>
             </a>
           </div>
