--- a/projects/sorting/index.html
+++ b/projects/sorting/index.html
@@ -437,7 +437,7 @@ procedure introsort(A, maxdepth):
           <canvas id="shared-line-chart"></canvas>
         </div>
       </div>
-      <h2>Sources and Citations</h2>
+      <h2 id='sources'>Sources and Citations</h2>
       <p>All the sources I collected code and other information from are listed below for reference.</p>
       <p>I borrowed much of javascript code that handles the actual sorting of the arrays from Justin Johnson. His "AnimatedArray" object and subsequent sorting code is what drives much of the background computation for this project. See citations below for more information.</p>
       <ul>
