Added direct link to the dashboard

--- a/projects/sorting.html
+++ b/projects/sorting.html
@@ -73,16 +73,19 @@
 
         <div class='row margin-bottom-4'>
           <div class='col-full'>
-            <img src='../assets/seeing_sorting/banner_image.png' alt='Screenshot of the dashboard on mac book mockup'>
+            <a href='sorting/index.html' target='_blank'><img src='../assets/seeing_sorting/banner_image.png' alt='Screenshot of the dashboard on mac book mockup'></a>
           </div>
         </div>
 
-        <div class='row margin-bottom-4'>
+        <div class='row'>
           <div class='text-wrapper'>
             <p>Learning sorting algorithms, such as <a href='https://en.wikipedia.org/wiki/Merge_sort' target='_blank'>Merge Sort</a> and <a href='https://en.wikipedia.org/wiki/Quicksort' target='_blank'>Quicksort</a>, is something many new computer science students need to accomplish. I wanted to design and build this interactive dashboard to help them better visualize the differences between several popular algorithms to make their studies more engaging.</p>
             <p>I used an existing Javascript sorting engine to drive the data processing for this project (<a href='sorting/index.html#sources' target='_blank'>see sources</a>), but user interaction was extremely limited in its original implementation. I kept all the logic for sorting and tracking the sort steps, but replaced all the charting and interactive elements using Bootstrap 4 and Chart.js.</p>
           </div>
         </div>
+
+        <a href='sorting/index.html' target='_blank'><span class='demo-button'>View the Live Dashboard</span></a>
+        <div class='row margin-bottom-4'></div>
 
         <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
@@ -99,7 +102,7 @@
           <div class='text-wrapper'>
             <h2>Sketches and Mockups</h2>
             <p>three paper sketches</p>
-            <img src='../assets/seeing_sorting/mockup.jpg' alt='Mockup created with Adobe XD after te initial sketches'>
+            <img class='screenshot' src='../assets/seeing_sorting/mockup.jpg' alt='Mockup created with Adobe XD after te initial sketches'>
           </div>
         </div>
 
@@ -108,10 +111,10 @@
             <h2>Final Product</h2>
             <h4>Top Section – Algorithm Details</h4>
             <p>Students can choose an algorithm to read an explanation of how it works and study its pseudo code. On the right they can configure an array and click “Sort” to watch it be performed and watch as the number of swaps the algorithm makes is displayed on the line chart below.</p>
-            <img src='../assets/seeing_sorting/top_half.png' alt='top half of the dashboard'>
+            <img class='screenshot' src='../assets/seeing_sorting/top_half.png' alt='top half of the dashboard'>
             <h4>Bottom Section – Compare Algorithm Performance</h4>
             <p>Students pick two algorithms to compare, then they’re able to watch how they stack up against each other.</p>
-            <img src='../assets/seeing_sorting/bottom_half.png' alt='bottom half of the dashboard'>
+            <img class='screenshot' src='../assets/seeing_sorting/bottom_half.png' alt='bottom half of the dashboard'>
           </div>
         </div>
 
