added another button to see the dashboard

--- a/projects/sorting.html
+++ b/projects/sorting.html
@@ -109,6 +109,8 @@
         <div class='row margin-bottom-4'>
           <div class='text-wrapper'>
             <h2>Final Product</h2>
+            <a href='sorting/index.html' target='_blank'><span class='demo-button'>View the Live Dashboard</span></a>
+            <!-- <div class='row margin-bottom-4'></div> -->
             <h4>Top Section – Algorithm Details</h4>
             <p>Students can choose an algorithm to read an explanation of how it works and study its pseudo code. On the right they can configure an array and click “Sort” to watch it be performed and watch as the number of swaps the algorithm makes is displayed on the line chart below.</p>
             <img class='screenshot' src='../assets/seeing_sorting/top_half.png' alt='top half of the dashboard'>
