Updated about me page

--- a/About.html
+++ b/About.html
@@ -50,25 +50,22 @@
 
       <div class = "container">
         <div class='row margin-top-4 margin-bottom-4'>
-          <div class='col-full'>
+          <div class='col-half'>
             <div class='project-title'>Hi, I'm Jackson.</div>
             <div class='project-subtitle'>It's nice to meet you.</div>
-          </div>
-        </div>
-        <div class = "row">
-          <div class = "col-half">
-            <p>I’m a designer who cares about the environment, privacy, and which book to read next.</p>
-            <p>I’m currently working on my master’s in UX Research and Design at the University of Michigan's School of Information and searching for internships. I believe UX design is a way I can satisfy my desire to create beautiful things, make a positive impact on the world, and build experiences that bring people joy.</p>
+            <p>I’m a designer and creator who cares about the environment, privacy, and which book to read next.</p>
+            <p>I’m currently finishing my master’s in UX Research and Design with a focus in web development at the University of Michigan's School of Information, and I’m searching for full-time positions. With UX Design I can satisfy my desire to create beautiful things, positively impact the world, and bring people joy.</p>
 
-            <p>Data visualization fascinates me, and you can often find me browsing <a href = "https://www.reddit.com/r/dataisbeautiful" target="_blank">r/dataisbeautiful</a>. I’m hoping to combine the design principles I’m learning with my technical background to find innovative ways to present complicated data to people.</p>
+            <p>I love data visualization and studying how it can help people make sense of complex information, and I bring that fascination to my work. I conduct research to discover users’ needs and iteratively design ways to meet them. I also build the prototypes for further testing and research, whether through full-stack web development or physical prototyping with microcontrollers.</p>
 
-            <p>In my free time I like to get outside and stay active, read, cook, brew coffee, and practice drumset.</p>
+            <p>In my free time I like to get outside and stay active, read, cook, brew coffee, and practice drum set.</p>
           </div>
           <div class = "col-half">
-            <img src = "assets/Picture_of_me.jpg" style='max-height: 75vh; max-width: 100%;' alt="Picture of myself">
+            <img src = "assets/Picture_of_me.jpg" style='max-height: 90vh; max-width: 100%;' alt="Picture of myself">
           </div>
         </div>
       </div>
+
     </main>
 
     <footer>
