Last changes to first version of sorting project

--- a/projects/sorting.html
+++ b/projects/sorting.html
@@ -80,7 +80,7 @@
         <div class='row'>
           <div class='text-wrapper'>
             <p>Learning sorting algorithms, such as <a href='https://en.wikipedia.org/wiki/Merge_sort' target='_blank'>Merge Sort</a> and <a href='https://en.wikipedia.org/wiki/Quicksort' target='_blank'>Quicksort</a>, is something many new computer science students need to accomplish. I wanted to design and build this interactive dashboard to help them better visualize the differences between several popular algorithms to make their studies more engaging.</p>
-            <p>I used an existing Javascript sorting engine to drive the data processing for this project (<a href='sorting/index.html#sources' target='_blank'>see sources</a>), but user interaction was extremely limited in its original implementation. I kept all the logic for sorting and tracking the sort steps, but replaced all the charting and interactive elements using Bootstrap 4 and Chart.js.</p>
+            <p>I used an existing Javascript sorting engine to drive the data processing for this project (<a href='sorting/index.html#sources' target='_blank'>see sources</a>), but user interaction was extremely limited in its original implementation. I kept all the logic for sorting and tracking the sort steps, but replaced all the charting and interactive elements using <a href='https://getbootstrap.com/docs/4.4/getting-started/introduction/' target='_blank'>Bootstrap 4</a> and <a href='https://www.chartjs.org/' target='_blank'>Chart.js</a>. With these improvements, combined with informational material gathered about each featured algorithm, I created a much greater learning experience. </p>
           </div>
         </div>
 
@@ -98,10 +98,24 @@
           </div>
         </div>
 
-        <div class='row margin-bottom-4'>
+        <div class='row'>
           <div class='text-wrapper'>
             <h2>Sketches and Mockups</h2>
-            <p>three paper sketches</p>
+          </div>
+        </div>
+        <div class='row margin-bottom-2'>
+          <div class='col-third'>
+            <img src='../assets/seeing_sorting/sketch_1.png' alt='Prototype sketch one'>
+          </div>
+          <div class='col-third'>
+            <img src='../assets/seeing_sorting/sketch_3.png' alt='Prototype sketch two'>
+          </div>
+          <div class='col-third'>
+            <img src='../assets/seeing_sorting/sketch_2.png' alt='Prototype sketch three'>
+          </div>
+        </div>
+        <div class='row margin-bottom-4'>
+          <div class='text-wrapper'>
             <img class='screenshot' src='../assets/seeing_sorting/mockup.jpg' alt='Mockup created with Adobe XD after te initial sketches'>
           </div>
         </div>
