Add new project gantt chart

--- a/projects/ai_internship.html
+++ b/projects/ai_internship.html
@@ -83,8 +83,17 @@
 
         <div class="row margin-bottom-4">
           <div class="text-wrapper">
-            <h2>Degree Details Design and Implementation</h2>
+            <h2>A New Degree Details Experience</h2>
             <p>The content library on Michigan Online is growing rapidly, and their catalog of online degrees is becoming increasingly popular. Pursuing an online degree from the University of Michigan is a large investment of time and money, and many learners will want to do lots of research before making their decision. An improved experience needed to be designed and developed to give learners the detailed information they’re seeking during their research.</p>
+          </div>
+        </div>
+
+        <div class="row margin-bottom-4">
+          <div class="text-wrapper">
+            <h2>Project Timeline</h2>
+          </div>
+          <div class='col-full'>
+            <img src='../assets/ai_internship/internship_timeline.png' alt='A Gantt chart representing the time it took to complete each phase of this design and development project'>
           </div>
         </div>
 
