Adding google analytics and extra HTML meta tags

--- a/projects/sorting/index.html
+++ b/projects/sorting/index.html
@@ -1,11 +1,21 @@
-<!-- TODO
-* Tidy up gross code that I wrote to meet my deadline
-  * Clean up all the JS in this file and move it to their own files
-  * Find areas with repeated or duplicated code and do a DRY refactoring
--->
-
-<html>
+<!doctype html>
+<html lang="en">
   <head>
+
+    <!-- Global site tag (gtag.js) - Google Analytics -->
+    <script async src="https://www.googletagmanager.com/gtag/js?id=UA-130245877-2"></script>
+    <script>
+      window.dataLayer = window.dataLayer || [];
+      function gtag(){dataLayer.push(arguments);}
+      gtag('js', new Date());
+
+      gtag('config', 'UA-130245877-2');
+    </script>
+
+    <!-- Required meta tags -->
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
+    
     <title>SI 649 Individual Project - Jackson Hammond</title>
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/Chart.js/2.7.2/Chart.js"></script>
